force-app/main/default/objects/Animal_Associated_costs__c/Animal_Associated_costs__c.object-meta.xml
<CustomObject>
    <description>Animal Associated costs/Miscellaneous</description>
    <label>Animal Associated costs</label>
    <nameField>
        <displayFormat>AAC-{000000}</displayFormat>
        <label>Animal Associated costs  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Animal Associated costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>