force-app/main/default/objects/Animal_Associated_costs__c/fields/Animals__c.field-meta.xml
<CustomField>
    <fullName>Animals__c</fullName>
    <label>Animals</label>
    <referenceTo>Animals__c</referenceTo>
    <relationshipLabel>Animal Associated costs</relationshipLabel>
    <relationshipName>Animal_Associated_costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>