force-app/main/default/objects/Animal_Associated_costs__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Animal Associated costs</relationshipLabel>
    <relationshipName>Animal_Associated_costs</relationshipName>
    <type>Lookup</type>
</CustomField>