force-app/main/default/objects/Animal_Associated_costs__c/fields/Cost_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Description__c</fullName>
    <description>Cost Description</description>
    <inlineHelpText>Cost Description</inlineHelpText>
    <label>Cost Description</label>
    <type>TextArea</type>
</CustomField>