force-app/main/default/objects/Animal_Associated_costs__c/recordTypes/Animal_Associated_Costs.recordType-meta.xml
<RecordType>
    <fullName>Animal_Associated_Costs</fullName>
    <active>true</active>
    <description>Animal Associated Costs</description>
    <label>Animal Associated Costs</label>
</RecordType>